examples/test/testpolicy13319.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13319
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key4: value21
      key34: value18
      key16: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value43
          key14: value4
          key49: value6
      podSelector:
        matchLabels:
          key1: value46
          key33: value10
